welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:41: error: Missing closing brace `}' assumed here
}
^